dist/1.0/bin/sample/retrieveUnpackaged/objects/Grant_Element__c.object
<CustomObject>
    <description>Store information about UKE grants elements.</description>
    <fields>
        <fullName>ACC_Account__c</fullName>
        <label>ACC Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Grant Elements</relationshipLabel>
        <relationshipName>Grant_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACC__c</fullName>
        <label>ACC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccrualAccount__c</fullName>
        <label>Accrual Account</label>
        <picklist>
            <picklistValues>
                <fullName>645003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>645002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>645047</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Months__c</fullName>
        <label>Amount (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Antenna_Size2__c</fullName>
        <label>Antenna Size2 [m]</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Antenna_Size__c</fullName>
        <label>Antenna Size [m]</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_ID__c</fullName>
        <label>Application ID</label>
        <referenceTo>Grant__c</referenceTo>
        <relationshipLabel>Grant Elements</relationshipLabel>
        <relationshipName>Grant2Grant_Element</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Band__c</fullName>
        <label>Band</label>
        <picklist>
            <picklistValues>
                <fullName>5,9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10,5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>38</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CID__c</fullName>
        <label>CID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Catch_Up_Currency__c</fullName>
        <label>Catch Up Currency</label>
        <picklist>
            <picklistValues>
                <fullName>EUR</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RON</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Catch_Up_PLN__c</fullName>
        <label>Catch Up PLN</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Catch_Up__c</fullName>
        <label>Catch Up</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Permit__c</fullName>
        <label>Change Permit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commision_Date__c</fullName>
        <label>Commision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Energis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Polska</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Account__c</fullName>
        <label>Cost Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Of_Issue__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date Of Issue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Signing__c</fullName>
        <label>Date Of Signing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deinstallation_Date__c</fullName>
        <label>Deinstallation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Of_Service__c</fullName>
        <label>End Of Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchg__c</fullName>
        <label>Exchg</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Cur__c</fullName>
        <label>Fee Currency</label>
        <picklist>
            <picklistValues>
                <fullName>PLN</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RON</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinancialOwner__c</fullName>
        <label>Financial Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Grant_Elements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Owner__c</fullName>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Grant_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gmina__c</fullName>
        <label>Gmina</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Position__c</fullName>
        <label>Invoice Position</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoiced_until__c</fullName>
        <label>Invoiced until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KAM__c</fullName>
        <label>KAM</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <description>Length (km)</description>
        <label>Length (km)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOR_Account__c</fullName>
        <label>MOR Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_of_One_off__c</fullName>
        <label>Month Of One Off</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly_Fee_PLN__c</fullName>
        <label>Monthly Fee PLN</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Fee__c</fullName>
        <label>Monthly Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Node__c</fullName>
        <label>Node</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneOffFeePLN__c</fullName>
        <label>One Off Fee PLN</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>One_Off_Fee_Cur__c</fullName>
        <label>One Off Fee Currency</label>
        <picklist>
            <picklistValues>
                <fullName>PLN</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RON</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>One_Off_Fee__c</fullName>
        <label>One Off Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Our_Customer__c</fullName>
        <label>Our Customer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAR_Fee_Coeff__c</fullName>
        <label>PAR Fee Coeff</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Permit_ID__c</fullName>
        <label>Permit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Of_Service__c</fullName>
        <label>Planned Start of Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pol__c</fullName>
        <label>Pol</label>
        <picklist>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radio_Equipment__c</fullName>
        <label>Radio Equipment</label>
        <picklist>
            <picklistValues>
                <fullName>NEC Pasolink NEO/c with LAN, 16xE1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEC Pasolink NEO 10MB with LAN, 16xE1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEC Pasolink NEO 20MB with LAN, 16xE1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEC Pasolink NEO 40MB with LAN, 16xE1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEC Pasolink NEO 80MB with LAN, 16xE1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEC Pasolink NEO 80MB with LAN, 32xE1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEC Pasolink NEO 100MB with LAN, 32xE1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEC Pasolink NEO 150MB 2xLAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEC Pasolink NEO STM-1 opt, S1,1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEC Pasolink NEO GbE, 150MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEC Pasolink NEO GbE + 3xLAN with VLAN + E1, 150MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEC Pasolink NEO GbE/STM-1, 310MB XPIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEC Pasolink NEO 40MB 1xE3+4E1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEC Pasolink NEO 80MB 2xE3+8E1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEC Pasolink + STM-1 opt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEC Pasolink + 2xLAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEC Pasolink MX 80MB with LAN, 32xE1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEC Pasolink V4 8MB with LAN, 4xE1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEC Pasolink V4 32MB with LAN, 16xE1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEC Pasolink V3 34MB, E3 + E1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceragon 1500P 2xSTM-1 opt XPIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceragon IP-10 25M 16xE1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceragon IP-10 50M 16xE1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceragon IP-10 100M 16xE1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceragon IP-10 150M 16xE1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceragon IP-10 200M 16xE1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceragon IP-10 300M 16xE1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sagem LinkF 34M, 9xE1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sagem LinkF 68M, 9xE1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sagem LinkF 68M, 26xE1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>BBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KRK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LBN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LDZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LSO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relation__c</fullName>
        <label>Relation</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report__c</fullName>
        <label>Report</label>
        <picklist>
            <picklistValues>
                <fullName>Point To Point</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Multipoints</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scala__c</fullName>
        <label>Scala</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Of_Service_From_Protocol__c</fullName>
        <label>Start Of Service From Protocol</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Street_Address_1__c</fullName>
        <label>Street Address 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_2__c</fullName>
        <label>Street Address 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Town_1__c</fullName>
        <label>Town 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Town_2__c</fullName>
        <label>Town 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Of_Cost__c</fullName>
        <label>Type Of Cost</label>
        <picklist>
            <picklistValues>
                <fullName>BNFF</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CRFF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CROF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BNOF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_Of_Payment__c</fullName>
        <label>Type Of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Annualy Fee</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quatrely Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half of the Year Fee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <picklist>
            <picklistValues>
                <fullName>3,5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Grant Element</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Application_ID__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Scala__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Node__c</columns>
        <columns>Active__c</columns>
        <columns>Planned_Start_Of_Service__c</columns>
        <columns>End_Of_Service__c</columns>
        <columns>Report__c</columns>
        <columns>Fee_Cur__c</columns>
        <columns>Fee__c</columns>
        <columns>Monthly_Fee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_ID__c</field>
            <operation>startsWith</operation>
            <value>unknow</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>kris_vw</fullName>
        <columns>ACC__c</columns>
        <columns>Active__c</columns>
        <columns>Application_ID__c</columns>
        <columns>NAME</columns>
        <columns>Scala__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Node__c</columns>
        <columns>Planned_Start_Of_Service__c</columns>
        <columns>End_Of_Service__c</columns>
        <columns>Report__c</columns>
        <columns>Fee_Cur__c</columns>
        <columns>Fee__c</columns>
        <columns>Monthly_Fee__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>E04861</value>
        </filters>
        <label>kris_vw</label>
    </listViews>
    <nameField>
        <label>Nextno</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grant Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Antenna_Size_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISBLANK(Antenna_Size__c ), TEXT(Report__c) = &apos;Point To Point&apos;)</errorConditionFormula>
        <errorDisplayField>Antenna_Size__c</errorDisplayField>
        <errorMessage>Antenna Size: You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Application_ID_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(Application_ID__c )</errorConditionFormula>
        <errorDisplayField>Application_ID__c</errorDisplayField>
        <errorMessage>Application ID: You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Band_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>OR(ISBLANK(TEXT(Band__c) ), TEXT(Band__c) = &apos;0&apos;)</errorConditionFormula>
        <errorDisplayField>Band__c</errorDisplayField>
        <errorMessage>Band: You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Channel_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(Channel__c )</errorConditionFormula>
        <errorDisplayField>Channel__c</errorDisplayField>
        <errorMessage>Channel: You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Currency_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>OR(
AND(NOT(ISNULL( One_Off_Fee__c )), ISBLANK(TEXT(One_Off_Fee_Cur__c ))),
AND(NOT(ISNULL( Monthly_Fee__c )), ISBLANK(TEXT(Fee_Cur__c )))
)</errorConditionFormula>
        <errorMessage>ERROR: One or more Currency fields hasn&apos;t been filled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Of_Signing_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(Date_Of_Signing__c )</errorConditionFormula>
        <errorDisplayField>Date_Of_Signing__c</errorDisplayField>
        <errorMessage>Date Of Signing: You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fee_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISNULL(Fee__c), NOT(ISBLANK(TEXT( Type_Of_Payment__c ))))</errorConditionFormula>
        <errorDisplayField>Fee__c</errorDisplayField>
        <errorMessage>Fee: You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Gmina_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISBLANK(Gmina__c ), TEXT(Report__c) = &apos;Multipoints&apos;)</errorConditionFormula>
        <errorDisplayField>Gmina__c</errorDisplayField>
        <errorMessage>Gmina: You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Length_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISBLANK(Length__c ), TEXT(Report__c) = &apos;Point To Point&apos;)</errorConditionFormula>
        <errorDisplayField>Length__c</errorDisplayField>
        <errorMessage>Length: You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Month_of_One_off_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>OR(AND(NOT(ISNULL(One_Off_Fee__c)), ISBLANK(TEXT( Month_of_One_off__c ))), ISNULL(One_Off_Fee__c))</errorConditionFormula>
        <errorDisplayField>Month_of_One_off__c</errorDisplayField>
        <errorMessage>Month Of One Off: You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Node_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISBLANK(Node__c ), TEXT(Report__c) = &apos;Multipoints&apos;)</errorConditionFormula>
        <errorDisplayField>Node__c</errorDisplayField>
        <errorMessage>Node: You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>One_Off_Fee_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISNULL(One_Off_Fee__c), NOT(ISNULL( Month_of_One_off__c )))</errorConditionFormula>
        <errorDisplayField>One_Off_Fee__c</errorDisplayField>
        <errorMessage>One Off Fee: You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PAR_Fee_Coeff_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISBLANK(TEXT(PAR_Fee_Coeff__c)), TEXT(Report__c) = &apos;Point To Point&apos;)</errorConditionFormula>
        <errorDisplayField>PAR_Fee_Coeff__c</errorDisplayField>
        <errorMessage>PAR Fee Coeff: You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Permit_ID_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(Permit_ID__c )</errorConditionFormula>
        <errorDisplayField>Permit_ID__c</errorDisplayField>
        <errorMessage>Permit ID: You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Planned_Start_Of_Service_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(Planned_Start_Of_Service__c )</errorConditionFormula>
        <errorDisplayField>Planned_Start_Of_Service__c</errorDisplayField>
        <errorMessage>Planned Start Of Service: You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pol_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISBLANK(TEXT(Pol__c)), TEXT(Report__c) = &apos;Point To Point&apos;)</errorConditionFormula>
        <errorDisplayField>Pol__c</errorDisplayField>
        <errorMessage>Pol: You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Radio_Equipment_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISBLANK(TEXT(Radio_Equipment__c)), TEXT(Report__c) = &apos;Point To Point&apos;)</errorConditionFormula>
        <errorDisplayField>Radio_Equipment__c</errorDisplayField>
        <errorMessage>Radio Equipment: You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Region_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISBLANK(TEXT(Region__c )), TEXT(Report__c) = &apos;Point To Point&apos;)</errorConditionFormula>
        <errorDisplayField>Region__c</errorDisplayField>
        <errorMessage>Region: You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Relation_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISBLANK(Relation__c ), TEXT(Report__c) = &apos;Point To Point&apos;)</errorConditionFormula>
        <errorDisplayField>Relation__c</errorDisplayField>
        <errorMessage>Relation: You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Report_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(TEXT(Report__c ))</errorConditionFormula>
        <errorDisplayField>Report__c</errorDisplayField>
        <errorMessage>You must enter a value in Report field and then in Type Of Cost field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Street_Address2_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISBLANK(Street_Address_2__c ), TEXT(Report__c) = &apos;Point To Point&apos;)</errorConditionFormula>
        <errorDisplayField>Street_Address_2__c</errorDisplayField>
        <errorMessage>Street Address 2: You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Street_Address_1_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Street_Address_1__c )</errorConditionFormula>
        <errorDisplayField>Street_Address_1__c</errorDisplayField>
        <errorMessage>Street Address 1: You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Town1_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(Town_1__c )</errorConditionFormula>
        <errorDisplayField>Town_1__c</errorDisplayField>
        <errorMessage>Town 1: You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Town2_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISBLANK(Town_2__c ), TEXT(Report__c) = &apos;Point To Point&apos;)</errorConditionFormula>
        <errorDisplayField>Town_2__c</errorDisplayField>
        <errorMessage>Town 2: You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_Of_Cost_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(TEXT(Type_Of_Cost__c ))</errorConditionFormula>
        <errorDisplayField>Type_Of_Cost__c</errorDisplayField>
        <errorMessage>You must enter a value in Report field and then in Type Of Cost field.</errorMessage>
    </validationRules>
</CustomObject>